Fixed the alignments

--- a/css/styles.css
+++ b/css/styles.css
@@ -730,12 +730,11 @@ body {
 .contact-us {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   padding: 120px 24px;
-  gap: 58px;
   width: 375px;
-  height: 844px;
+  height: 944px;
+  padding: 0;
   margin: 0 auto;
 }
 
@@ -754,19 +753,22 @@ body {
   text-align: center;
   color: #172B4D;
   margin: 0 auto;
+  margin-top: 5rem;
 }
 
 .form-fieldset {
+  width: 375px;
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  gap: 15px;
-  width: 100%;
+  gap: 2rem;
   border: none;
 }
 
 .form-text {
-  width: 100%;
+  width: 375px;
   height: 48px;
   margin-left: 0;
   font-family: 'Inter';
@@ -774,18 +776,35 @@ body {
   font-weight: 400;
   font-size: 15px;
   line-height: 24px;
+  border: 0;
+  padding: 0;
+  border-bottom: 1px solid #888;
 }
 
 .form-msg {
   height: 114px;
+  background: #FBF8F7;
+  padding-left: 5px;
+  width: 375px;
 }
 
 #form-submit {
   width: 131px;
   height: 40px;
   background-color: #ff6b00;
-  margin: 0 auto;
+  margin: auto;
   border: none;
+  font-family: 'Inter', sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 24px;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #FFFFFF;
+  padding-left: 15px;
 }
 
 #form-submit:hover {
@@ -807,10 +826,15 @@ body {
 .form-icon-container {
   justify-content: center;
   align-items: center;
-  border-top: 1px solid #888;
   padding: 10px;
 }
 
 .form-icon-element {
   background-color: #fff;
+}
+
+hr {
+  border-top: 1px solid #888;
+  width: 100%;
+  margin-bottom: 0;
 }
